--- a/app/src/main/res/layout/card_recipe_full.xml
+++ b/app/src/main/res/layout/card_recipe_full.xml
@@ -11,7 +11,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/recipe_card_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="16dp">
 
         <ImageView
