Add recipe card

--- a/app/src/main/res/layout/card_recipe_full.xml
+++ b/app/src/main/res/layout/card_recipe_full.xml
@@ -16,12 +16,12 @@
 
         <ImageView
             android:id="@+id/recipe_image"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/lighter_gray"
+            android:background="@color/gray_300"
             android:contentDescription="@string/recipe_image_description"
             android:minHeight="120dp"
-            android:tint="@color/icon_dark"
+            android:tint="@color/white"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -46,10 +46,9 @@
 
         <ImageButton
             android:id="@+id/recipe_bookmark"
-            style="@style/LayoutMenuButton"
+            style="@style/LightIconButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:alpha="0.5"
             android:contentDescription="@string/action_overflow"
             app:layout_constraintRight_toLeftOf="@+id/recipe_menu"
             app:layout_constraintTop_toTopOf="parent"
@@ -57,10 +56,9 @@
 
         <ImageButton
             android:id="@+id/recipe_menu"
-            style="@style/LayoutMenuButton"
+            style="@style/LightIconButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:alpha="0.5"
             android:contentDescription="@string/action_overflow"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -98,7 +96,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:clickable="true"
-            android:tint="@color/icon_dark"
+            android:tint="@color/white"
             app:backgroundTint="@color/primary"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@+id/recipe_image"
@@ -151,7 +149,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_label_layout"
             app:srcCompat="@drawable/ic_timer"
@@ -177,7 +175,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_time_icon"
             app:srcCompat="@drawable/ic_recipe_category"
@@ -203,7 +201,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_category_icon"
             app:srcCompat="@drawable/ic_food_energy"
@@ -229,7 +227,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_energy_icon"
             app:srcCompat="@drawable/ic_food_nutrition"
@@ -255,7 +253,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_nutrition_icon"
             app:srcCompat="@drawable/ic_food"
@@ -307,7 +305,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_food_icon"
             app:srcCompat="@drawable/ic_date_top"
@@ -332,7 +330,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
-            android:tint="@color/icon_light"
+            android:tint="@color/black_a054"
             app:layout_constraintBottom_toBottomOf="@+id/recipe_creation_date"
             app:layout_constraintLeft_toRightOf="@+id/recipe_creation_date"
             app:layout_constraintTop_toTopOf="@+id/recipe_creation_date"
