--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,17 @@
     <color name="secondary">#ffc107</color>
     <color name="secondary_dark">#ffa000</color>
     <color name="white">#ffffff</color>
+    <color name="white_a20">#33ffffff</color>
     <color name="black">#000000</color>
-    <color name="icon_light">#8a000000</color>
-    <color name="icon_dark">#ffffff</color>
-    <color name="lighter_gray">#dddddd</color>
-    <color name="darker_gray">#aaaaaa</color>
+    <color name="black_a054">#8a000000</color>
+    <color name="gray_100">#F5F5F5</color>
+    <color name="gray_200">#EEEEEE</color>
+    <color name="gray_300">#E0E0E0</color>
+    <color name="gray_400">#BDBDBD</color>
+    <color name="gray_500">#9E9E9E</color>
+    <color name="gray_600">#757575</color>
+    <color name="gray_700">#616161</color>
+    <color name="gray_800">#424242</color>
+    <color name="gray_900">#212121</color>
     <color name="transparent">#00000000</color>
-    <color name="transparent_primary">#32ff5722</color>
 </resources>
