--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,6 +37,7 @@
 
     <style name="LightIconText">
         <item name="android:textColor">@color/gray_600</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
     </style>
 
     <style name="AppTheme.RatingBarIndicator">
